Fix overflow scrollbars in windows. improve styling of feature popup when no attributes

--- a/smk-parent/smk-client/src/main/javascript/feature-list/popup-feature.css
+++ b/smk-parent/smk-client/src/main/javascript/feature-list/popup-feature.css
@@ -1,6 +1,8 @@
+.smk-feature-popup .smk-feature {
+    position: relative;
+}
+
 .smk-feature-popup .smk-header {
-    border-bottom: 1px solid gray;
-    margin-bottom: 10px;
     padding-left: 10px;
     padding-bottom: 5px;
 }
@@ -21,14 +23,15 @@
     margin-left: -10px;
 }
 
-.smk-feature-popup .smk-feature {
-    position: relative;
+.smk-header + .smk-attributes {
+    border-top: 1px solid gray;
 }
 
 .smk-feature-popup .smk-attributes, .smk-feature-popup .smk-description {
     width: 100%;
     max-height: 200px;
-    overflow-y: scroll;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .smk-feature-popup .smk-attribute:nth-child( 2n ) {
@@ -57,7 +60,6 @@
 
 .smk-feature-popup .smk-commands {
     border-top: 1px solid gray;
-    margin-top: 10px;
     padding-top: 5px;
     user-select: none;
 
