--- a/smk-parent/smk-client/src/main/javascript/sidepanel/sidepanel.css
+++ b/smk-parent/smk-client/src/main/javascript/sidepanel/sidepanel.css
@@ -53,7 +53,7 @@
     padding-right: 5px;
     padding-bottom: 5px;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     height: 100%;
 }
 
