--- a/smk-parent/smk-client/src/main/javascript/tool/directions/tool-directions.css
+++ b/smk-parent/smk-client/src/main/javascript/tool/directions/tool-directions.css
@@ -101,7 +101,7 @@
     position: relative;
     flex: 1 0;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     height: 100%;
     margin-top: 5px;
 }
